--- a/index.html
+++ b/index.html
@@ -10,6 +10,15 @@
     <H4>Colegio Estadual Professora Reni Correia Gamper</H4>
     <h5>matematica II - programação 1</h5>
     <hr>
-    
+    <h1>Beneficios sobre a gaita</h1>
+    <ul>
+        <li>Aumenta sua capacidade de memorização</li>
+        <li>Melhora suas habilidades de gestão do tempo e organização </li>
+        <li>melhora a cordenação motora </li>
+        <li>Aumenta a responsabilidade</li>
+    </ul>
+    <p> 
+      
+        </p>
 </body>
 </html>
