--- a/index.html
+++ b/index.html
@@ -24,5 +24,11 @@
  Os baixos são botões tocados com a mão esquerda que exercem função ou de baixo (como a tuba numa banda), tocando notas e acordes em um ritmo determinado pelo estilo da música, ou de baixo-livre (como os pedais em um órgão), mais usado em peças clássicas.
  A principal configuração de baixos é o sistema Stradella, na qual as duas primeiras fileiras são notas, sendo a segunda o baixo fundamental, que determina a tonalidade dos acordes abaixo, e a primeira, acima da segunda, o intervalo de terça maior a partir da fundamental. As outras 4 fileiras abaixo são os acordes maiores, menores, de sétima dominante e sétima diminuto, organizados em colunas a partir da nota de sua fileira.
         </p>
+        <h2> História </h2>
+        <p>
+            No Brasil, a primeira sanfona que chegou era chamada de concertina (acordeão cromático de botão com 120 baixos). A sanfona tornou-se popular principalmente no nordeste, centro–oeste e sul do Brasil. Os primeiros gêneros (fado, valsa, polca, bugiu) retratavam o folclore dos imigrantes portugueses, alemães, italianos, franceses e espanhóis.
+Já no Nordeste, desde o início do século XX, mais precisamente com a construção da malha ferroviária brasileira pelos ingleses, deu-se início a um novo ritmo, o forró, característico da região, no qual um dos principais instrumentos musicais é o acordeão.
+No Rio Grande do Sul, a sanfona é mais conhecido como gaita. No sul, especialmente no estado citado, devido ao fato de sua música tradicionalista, o instrumento ficou muito conhecido e grandes nomes surgiram, que também foram precursores da música gaúcha, como Adelar Bertussi, Albino Manique, Edson Dutra, Porca Véia dentre outros. 
+        </p>
 </body>
 </html>
