--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
     <h5>matematica II - programação 1</h5>
     <hr>
     <h1>Beneficios sobre a gaita</h1>
+    <img src="sanfoninha.jpg" alt="desenho de uma sanfoninha ">
     <ul>
         <li>Aumenta sua capacidade de memorização</li>
         <li>Melhora suas habilidades de gestão do tempo e organização </li>
