--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
     <hr>
     <h1>Beneficios sobre a gaita</h1>
     <img src="sanfoninha.jpg" alt="desenho de uma sanfoninha ">
+    <img src="" alt="">
     <ul>
         <li>Aumenta sua capacidade de memorização</li>
         <li>Melhora suas habilidades de gestão do tempo e organização </li>
