--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
         <li>Aumenta a responsabilidade</li>
     </ul>
     <h2> O instrumento </h2>
+    <img src="foto.jpg" alt="">
     <p>  O som desse instrumento é produzido ao forçar o ar do fole entre duas palhetas (localizadas no chamado castelo, dentro do fole), que vibram mais grave ou agudo de acordo com a distância entre elas (quando mais distantes, mais grave o som). Quanto mais forte o ar é forçado, mais alto é o som. O ar é proveniente do fole, que é aberto ou fechado com o auxílio do braço esquerdo.
  A maioria das sanfonas tem quatro registros, que são diferentes oitavas para uma mesma tecla. Portanto, em um acordeão de quatro registros com o registro mestre pressionado, ao tocar um Dó, na verdade são tocados: dois Dós na oitava que pressionou, um Dó uma oitava acima e um Dó na oitava abaixo, e isso é responsável pelo som único do acordeão.
  O teclado, tradicionalmente tocado com a mão direita, tem a posição vertical, com as notas mais graves para cima e as mais agudas para baixo. Ao pressionar uma tecla do teclado, uma alavanca sobe, que libera um buraco ligado ao fole que permite o ar passar pelas palhetas e assim criar o som.
